feat: #21. LocalDateTime -> String 메서드 적용